--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,14 @@ services:
     build: api
     ports:
      - 4200
+    networks:
+     - backbone
   ui:
     build: ui
     ports:
      - 3000:3000
+    networks:
+     - backbone
 networks:
   backbone:
     driver: bridge
