use external network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,5 @@ services:
     networks:
      - backbone
 networks:
-  default:
-    external:
-      name: backbone
- #     driver: bridge
+  backbone:
+    external: true
