--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,6 @@ services:
 networks:
   backbone:
     driver: bridge
-    subnet: 172.18.0.0/16
+    ipam:
+      config:
+       - subnet: 172.18.0.0/16
